--- a/views/books/detail.ejs
+++ b/views/books/detail.ejs
@@ -220,12 +220,12 @@
                                             <% if (review.owner.avatar !== null) { %>
                                                 <a href="/users/<%= review.owner.id %>">
                                                     <img src="<%= review.owner.avatar %>" class="w-30-h-30" alt="library">
-                                                    <%= review.user.name %>
+                                                    <%= review.owner.name %>
                                                 </a><strong>[Owner this book]</strong>
                                             <% } else { %>
                                                 <a href="/users/<%= review.owner.id %>">
                                                     <img src="/images/user/icon_user_default.png" class="w-30-h-30" alt="library">
-                                                    <%= review.user.name %>
+                                                    <%= review.owner.name %>
                                                 </a><strong>[Owner this book]</strong>
                                             <% } %>
                                         </div>
@@ -270,25 +270,45 @@
                             <form action="/books/review/<%= data.item.id %>" id="form-review" method="post">
                                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-9">
                                     <div class="form-group">
-                                        <% if (data.item.current_user_review !== null) { %>
-                                            <textarea name="content" id="content" class="form-control bg-info" cols="50" rows="5"placeholder="Enter your review..." required> <%= data.item.current_user_review.content %> </textarea>
-                                            <div class="col-xs-12 col-sm-12 col-md-12">
-                                                <input id="rating-book" name="star" class="rating" data-min="0" data-max="5" data-step="1" value=<%= data.item.current_user_review.star %> data-size="xs">
+                                        <div class="col-xs-12 col-sm-12 col-md-12">
+                                            Content
+                                            <% if (data.item.current_user_review !== null) { %>
+                                                <textarea name="content" id="content" class="form-control bg-info" cols="50" rows="5"placeholder="Enter your review..." required> <%= data.item.current_user_review.content %> </textarea>
+                                            <% } else { %>
+                                                <textarea name="content" id="content" class="form-control bg-info" cols="50" rows="5" placeholder="Enter your review..." required></textarea>
+                                            <% } %>
+                                        </div>
+                                        <div class="space-10"></div>
+                                        <div class="col-xs-12 col-sm-12 col-md-12">
+                                            <div class="col-xs-8 col-sm-8 col-md-8 owner-option">
+                                                <% if (data.item.owners) { %>
+                                                    Choose book owner
+                                                    <select class='form-control' name='owner_review'>
+                                                        <% data.item.owners.forEach(function (owner) { %>
+                                                            <option <%= data.item.current_user_review !== null && data.item.current_user_review.owner.id == owner.id ? "selected" : "" %> value="<%= owner.id %>"><%= owner.name %> [<%= owner.email %>]</option>
+                                                        <% }) %>
+                                                    </select>
+                                                <% } %>
                                             </div>
-                                        <% } else { %>
-                                            <textarea name="content" id="content" class="form-control bg-info" cols="50" rows="5" placeholder="Enter your review..." required></textarea>
-                                            <div class="col-xs-12 col-sm-12 col-md-12">
-                                                <input id="rating-book" name="star" class="rating" data-min="0" data-max="5" data-step="1" data-size="xs">
+                                            <div class="col-xs-4 col-sm-4 col-md-4">
+                                                <% if (data.item.current_user_review !== null) { %>
+                                                    <input id="rating-book" name="star" class="rating" data-min="0" data-max="5" data-step="1" value=<%= data.item.current_user_review.star %> data-size="xs">
+                                                <% } else { %>
+                                                    <input id="rating-book" name="star" class="rating" data-min="0" data-max="5" data-step="1" data-size="xs">
+                                                <% } %>
                                             </div>
-                                        <% } %>
+                                        </div>
                                     </div>
                                 </div>
+                                <div class="space-10"></div>
                                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-9">
-                                    <% if (data.item.current_user_review !== null) { %>
-                                        <button type="submit" class="btn btn-primary hover-btn-default"> Edit review <i class="fa fa-long-arrow-right"></i></button>
-                                    <% } else { %>
-                                        <button type="submit" class="btn btn-primary hover-btn-default"> Review <i class="fa fa-long-arrow-right"></i></button>
-                                    <% } %>
+                                    <div class="col-xs-12 col-sm-12 col-md-12">
+                                        <% if (data.item.current_user_review !== null) { %>
+                                            <button type="submit" class="btn btn-primary hover-btn-default"> Edit review <i class="fa fa-long-arrow-right"></i></button>
+                                        <% } else { %>
+                                            <button type="submit" class="btn btn-primary hover-btn-default"> Review <i class="fa fa-long-arrow-right"></i></button>
+                                        <% } %>
+                                    </div>
                                 </div>
                             </form>
                         </div>
