--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,6 +49,21 @@
                             <a href="/books/<%= book.id %>" class="text-primary">View detail</a>
                         </div>
                     </div>
+                    <strong> Owners </strong>
+                    <% if (book.owners) { %>
+                        <% var countOwner = 0 %>
+                        <% book.owners.forEach(function (owner) { %>
+                            <%  countOwner++;
+                                if (countOwner == 6) {
+                                    %> <strong> ... </strong> <%
+                                    return;
+                                }
+                             %>
+                            <img onclick="window.open('/users/<%= owner.id %>')" data-toggle="tooltip" title="<%= owner.name %>" class="owner-image-home img-circle" src="<%= (owner && owner.avatar) ? owner.avatar : '/images/user_default.png' %>"
+                                     class="media-object author-photo img-thumbnail <%= owner ? '' : 'background--white' %>"
+                                     alt="library">
+                        <% }) %>
+                     <% } %>
                 </div>
             </div>
             <% }) %>
