--- a/views/books/add.ejs
+++ b/views/books/add.ejs
@@ -18,7 +18,7 @@
             <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
                 <div id="modelSpace"></div>
                 <div class='suggestedTitle'></div>
-                <span><button class="btn btn-primary btn-xs" id="fillSuggestData"> Suggest book </button></span>
+                <span><button class="btn btn-primary btn-xs" id="fillSuggestData"> Import data book </button></span>
                 <form action="/books/add" id="form-add-book" method="post" enctype="multipart/form-data">
                     <div class="row">
                         <div class="col-xs-12 col-sm-6">
@@ -78,6 +78,7 @@
                             </div>
                         </div>
                     </div>
+                    <img id="thumbnail-image"> </img>
                     <% for(i = 1; i <= 3; i++) { %>
                         <div class="row">
                             <div class="col-xs-12 col-sm-6">
